# flutter_bspatch

./: .metadata  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
data/: c
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_bspatch_example/: MainActivity.kt
example/android/app/src/main/kotlin/io/github/li_zenghui/flutter_bspatch_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_bspatch.podspec
ios/Classes/: flutter_bspatch.c
lib/: flutter_bspatch.dart  flutter_bspatch_bindings_generated.dart
linux/: CMakeLists.txt
macos/: flutter_bspatch.podspec
src/: CMakeLists.txt  flutter_bspatch.c  flutter_bspatch.h
windows/: CMakeLists.txt
